<resources>
    <string name="app_name" translatable="false">qaema cashier</string>
    <string name="text_french" translatable="false">French</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_bangla" translatable="false">বাংলা</string>
    <string name="text_spanish" translatable="false">Spanish</string>
    <string name="text_hindi" translatable="false">हिन्दी</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_ads_id" translatable="false">"ca-app-pub-3940256099942544/1033173712"</string>
    <string name="action_settings">Settings</string>
    <string name="products">Products</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="pos">POS</string>
    <string name="expense">Expense</string>
    <string name="report">Report</string>
    <string name="all_orders">All Orders</string>
    <string name="orders">Orders</string>
    <string name="all_sales">All Sales</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_cell">Customer Cell</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_address">Customer Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_cell">Enter Customer Cell</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="customer_successfully_added">Customer Successfully Added</string>
    <string name="hello">Hello</string>
    <string name="sync">Sync</string>
    <string name="change_language">Change Language</string>
    <string name="current_shift_sales">Current Shift Sales</string>
    <string name="guest">Guest</string>
    <string name="sar">SAR</string>
    <string name="items">Items</string>
    <string name="quick_bills">Quick Bills</string>
    <string name="refund">Refund</string>
    <string name="refund_btn">Refund</string>
    <string name="end_of_shift">End of Shift</string>
    <string name="confirmation_refund">Confirmation refund</string>
    <string name="confirmation_refund_desc">Are you sure you want to refund this order?</string>
    <string name="items_successfully_refunded">Items Successfully Refunded</string>
    <string name="cutom_item_already_added">Custom item already added</string>
    <string name="cart">Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="vat_exclusive">(VAT Exclusive)</string>
    <string name="total_vat">Total Vat</string>
    <string name="add_items">Add items</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_with_error">Confirm with error</string>
    <string name="checkout">Checkout</string>
    <string name="cash">Cash</string>
    <string name="cash_ar">Cash / نقد</string>
    <string name="cash_details">Cash Details</string>
    <string name="cash_given">Cash Given</string>
    <string name="change">Change</string>
    <string name="pay">Pay</string>
    <string name="cash_given_must_be_equal_or_more_than_total_amount">Cash given must be more than or equal to Total amount</string>
    <string name="all_customer">All Customer</string>
    <string name="no_customer_found">No Customer Found!</string>
    <string name="all_suppliers">All Suppliers</string>
    <string name="no_suppliers_found">No Suppliers Found!</string>
    <string name="add_suppliers">Add Suppliers</string>
    <string name="enter_suppliers_name">Enter Suppliers Name</string>
    <string name="enter_suppliers_contact_person_name">Enter Suppliers Contact Person Name</string>
    <string name="enter_suppliers_cell">Enter Suppliers Cell</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_suppliers_address">Enter Suppliers Address</string>
    <string name="suppliers_successfully_added">Suppliers Successfully Added</string>
    <string name="failed">Failed</string>
    <string name="product_name_cannot_be_empty">Product name can\'t be empty!</string>
    <string name="product_category_cannot_be_empty">Product category can\'t be empty!</string>
    <string name="product_sell_price_cannot_be_empty">Product sell price can\'t be empty!</string>
    <string name="product_stock_cannot_be_empty">Product stock can\'t be empty!</string>
    <string name="product_supplier_cannot_be_empty">Product supplier can\'t be empty!</string>
    <string name="product_weight_cannot_be_empty">Product weight can\'t be empty!</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="product_code">Product Code</string>
    <string name="product_description">Product Description</string>
    <string name="unit_product_sell_price">Unit Product Sell Price</string>
    <string name="product_sell_price">Product Sell Price</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_weight">Product Weight</string>
    <string name="select_product_weight_unit">Select Product Weight Unit</string>
    <string name="product_weight_unit">Product Weight Unit</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="database_backup">Database Synchronization</string>
    <string name="database_import">Database Import</string>
    <string name="year_2020">Year 2020</string>
    <string name="total_sales">Total Sales : </string>
    <string name="search_here">Search Here. . . .</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_product_found">No Product Found</string>
    <string name="submit_order">Submit Order</string>
    <string name="all_sales_report">All Sales Report</string>
    <string name="all_expense_report">All Expense Report</string>
    <string name="monthly_sales_graph">Monthly Sales Graph</string>
    <string name="monthly_expense_graph">Monthly Expense Graph</string>
    <string name="no_data_found">No Data Found</string>
    <string name="shop_information">Shop Information</string>
    <string name="data_backup">Data Synchronization</string>
    <string name="end_shift">End Shift</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact_number">Shop Contact Number</string>
    <string name="shop_email">Shop Email</string>
    <string name="shop_address">Shop Address</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="shop_currency">Shop Currency</string>
    <string name="edit">Edit</string>
    <string name="update_information">Update Information</string>
    <string name="product_category">Product Category</string>
    <string name="cancel">Cancel</string>
    <string name="payment">PAYMENT</string>
    <string name="submit">SUBMIT</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_status">Product Status</string>
    <string name="product_name">Product Name</string>
    <string name="arabic_product_name">Arabic product Name</string>
    <string name="product_uuid">Product UUID</string>
    <string name="weight">Weight:</string>
    <string name="price">Price</string>
    <string name="unit_product_buy_price"> Unit Product Buy  Price </string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_contact_person">Supplier Contact Person</string>
    <string name="supplier_cell">Supplier Cell</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="monthly_expense_in_graph">Monthly Expense in Graph</string>
    <string name="year">Year</string>
    <string name="monthly_expense_report">Monthly Expense Report</string>
    <string name="total_expense">Total Expense: </string>
    <string name="monthly_sales_report">Monthly Sales Report</string>
    <string name="all_expense">All Expense</string>
    <string name="shop_name_cannot_be_empty">Shop name can\'t be empty</string>
    <string name="shop_contact_cannot_be_empty">Shop contact can\'t be empty</string>
    <string name="shop_address_cannot_be_empty">Shop address can\'t be empty</string>
    <string name="shop_currency_cannot_be_empty">Shop currency can\'t be empty</string>
    <string name="shop_information_updated_successfully">Shop Information Updated Successfully</string>
    <string name="enter_local_database_backup_name">Enter Local Database Synchronization Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unable_to_create_directory_retry">Unable to create directory. Retry</string>
    <string name="database_restore">Database Restore:</string>
    <string name="unable_to_restore_retry">Unable to restore. Retry</string>
    <string name="backup_folder_not_present">Synchronization folder not present</string>
    <string name="all_product">All Product</string>
    <string name="product_cart">Product Cart</string>
    <string name="no_product_in_cart">No Product in Cart</string>
    <string name="order_done_successful">Order Done Successful</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="select_order_type">SELECT ORDER TYPE</string>
    <string name="select_customer">SELECT CUSTOMER</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="invoice">Invoice</string>
    <string name="total_price">Total Price: </string>
    <string name="add_expense">Add Expense</string>
    <string name="hi_welcome">Hello! Welcome</string>
    <string name="product_removed_from_cart">Product removed from cart</string>
    <string name="backup_completed_successfully">Synchronization Completed Successfully</string>
    <string name="welcome_to_qaema">Welcome to qaema cashier</string>
    <string name="Please_enter_your_login_info">Please enter your login info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="receipt_details">Receipt Details</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="view_receipt">View Receipt</string>
    <string name="view_all_receipt">View All Receipt</string>
    <string name="or">OR</string>
    <string name="options">Options</string>
    <string name="custom_items">Custom Item</string>
    <string name="clear_all_items">Clear All Items</string>
    <string name="confirmation_for_download_product_images">Confirmation for download?</string>
    <string name="confirmation_for_download_product_images_text">The file size that you need to download is</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="del">Del</string>
</resources>