<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="7.5dp"
        android:layout_marginTop="41dp">
        <TextView
            android:id="@+id/num_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="7.5dp"
        android:layout_marginTop="18dp">
        <TextView
            android:id="@+id/num_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="7.5dp"
        android:layout_marginTop="18dp">
        <TextView
            android:id="@+id/num_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="7.5dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="26dp">
        <TextView
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="."
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/num_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>

        <TextView
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/del"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginHorizontal="7.5dp"
            android:textColor="@color/purple"
            android:background="@drawable/custom_home_items"/>
    </LinearLayout>

</LinearLayout>