<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f9"
    tools:context=".refund.Refund">

    <ImageView
        android:id="@+id/back_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:text="@string/refund"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/back_im"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_im" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/receipt_details"
        android:textColor="@color/light_purple"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_im" />

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners_login_edittext_light"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/receipt_number"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_purple"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <Button
        android:id="@+id/view_receipt_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_6"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/view_receipt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/search_et" />


    <Button
        android:id="@+id/view_all_receipt_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button_6"
        android:backgroundTint="#ECE9FF"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/view_all_receipt"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="25dp"
        android:background="#E6E9EF"
        app:layout_constraintBottom_toTopOf="@id/view_all_receipt_btn" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_f9"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="@id/line"
        app:layout_constraintEnd_toEndOf="@id/line"
        app:layout_constraintStart_toStartOf="@id/line"
        app:layout_constraintTop_toTopOf="@id/line" />


</androidx.constraintlayout.widget.ConstraintLayout>