<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_round_top_16">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginTop="62dp"
        android:layout_marginStart="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="24dp">
        <LinearLayout
            android:id="@+id/custom_item_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_home_items"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_custom_option"
                android:text="@string/custom_items"
                android:drawablePadding="16dp"
                android:textSize="13sp"
                android:textColor="@color/purple"
                android:fontFamily="@font/inter_semibold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/clear_items_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_home_items"
            android:backgroundTint="#FBE7E7"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_clear_all_items"
                android:text="@string/clear_all_items"
                android:drawablePadding="16dp"
                android:textSize="13sp"
                android:textColor="#F74F4F"
                android:fontFamily="@font/inter_semibold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>